# VIC

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  CalcAerodynamic.c  CalcBlowingSnow.c  ChangeLog  Dockerfile  IceEnergyBalance.c  LAKE.h  LICENSE.txt  Makefile  README.txt  README_irrig.txt  Revisions.txt  SnowPackEnergyBalance.c  StabilityCorrection.c  VIC.sublime-workspace  alloc_atmos.c  arno_evap.c  aurad.c  bck.user_def.h  calc_air_temperature.c  calc_atmos_energy_bal.c  calc_cloud_cover_fraction.c  calc_forcing_stats.c  calc_long_shortwave.c  calc_longwave.c  calc_netshort.c  calc_rainonly.c  calc_root_fraction.c  calc_snow_coverage.c  calc_snow_ground_flux.c  calc_surf_energy_bal.c  calc_trans.c  calc_veg_params.c  calc_water_density.c  calc_water_energy_balance_errors.c  canopy_evap.c  (+141 more)
src/: CMakeLists.txt  CalcAerodynamic.c  CalcBlowingSnow.c  ChangeLog  IceEnergyBalance.c  LAKE.h  Makefile  README.txt  Readme_irrigation.md  SnowPackEnergyBalance.c  StabilityCorrection.c  advected_sensible_heat.c  alloc_atmos.c  alloc_veg_hist.c  apidemo.cpp  arno_evap.c  calc_Nscale_factors.c  calc_air_temperature.c  calc_atmos_energy_bal.c  calc_forcing_stats.c  calc_longwave.c  calc_rainonly.c  calc_root_fraction.c  calc_snow_coverage.c  calc_surf_energy_bal.c  calc_veg_params.c  calc_water_energy_balance_errors.c  canopy_assimilation.c  canopy_evap.c  check_files.c  check_state_file.c  close_files.c  cmd_proc.c  compress_files.c  compute_coszen.c  compute_dz.c  compute_pot_evap.c  compute_soil_resp.c  compute_treeline.c  compute_zwt.c  (+102 more)
vic/: CMakeLists.txt
vic/drivers/cesm/: Makefile  readme.md
vic/drivers/cesm/bld/: build_vic_namelist  vic.buildexe.csh  vic.buildnml.csh  vic.constants.txt  vic.globalconfig.txt  vic.inputfiles.cfg  vic.options.txt  vic.parameters.txt
vic/drivers/cesm/cpl_esmf/: lnd_comp_esmf.F90  lnd_comp_mct.F90
vic/drivers/cesm/cpl_mct/: lnd_comp_mct.F90
vic/drivers/cesm/include/: vic_cesm_def.h  vic_driver_cesm.h  vic_mpi.h
vic/drivers/cesm/src/: alloc_atmos.c  alloc_veg_hist.c  cesm_def_mod_f.F90  cesm_interface_c.c  cesm_interface_f.F90  cesm_mpi_utils.c  cesm_print_library_f.F90  cesm_put_data.c  display_current_settings.c  get_global_domain.c  get_global_param.c  get_nc_dimension.c  get_nc_field.c  init_library.c  initialize_energy.c  initialize_model_state.c  output_list_utils.c  parse_output_info.c  print_library_cesm.c  print_library_image.c  put_nc_field.c  vic_alloc.c  vic_cesm_alloc.c  vic_cesm_def_mod_f.F90  vic_cesm_finalize.c  vic_cesm_init_library.c  vic_cesm_interface_c.c  vic_cesm_interface_f.F90  vic_cesm_print_library_f.F90  vic_cesm_run.c  vic_cesm_start.c  vic_cesm_time.c  vic_finalize.c  vic_force.c  vic_init.c  vic_init_output.c  vic_mpi_support.c  vic_nc_info.c  vic_populate_model_state.c  vic_restore.c  (+3 more)
vic/drivers/classic/: Makefile
vic/drivers/classic/include/: vic_driver_classic.h
vic/drivers/classic/src/: alloc_atmos.c  alloc_veg_hist.c  calc_air_temperature.c  calc_longwave.c  check_files.c  check_save_state_flag.c  check_state_file.c  close_files.c  compute_cell_area.c  display_current_settings.c  free_out_data_files.c  get_dist.c  get_force_type.c  get_global_param.c  initialize_atmos.c  initialize_files.c  initialize_forcing_files.c  initialize_model_state.c  make_in_and_outfiles.c  mtclim_wrapper.c  open_state_file.c  output_list_utils.c  parse_output_info.c  print_library_classic.c  read_atmos_data.c  read_forcing_data.c  read_initial_model_state.c  read_lakeparam.c  read_snowband.c  read_soilparam.c  read_veglib.c  read_vegparam.c  set_output_defaults.c  vic_classic.c  vic_classic_timing.c  vic_force.c  vic_populate_model_state.c  write_data.c  write_forcing_file.c  write_header.c  (+2 more)
vic/drivers/image/: Makefile
vic/drivers/image/include/: vic_driver_image.h  vic_mpi.h
vic/drivers/image/src/: alloc_atmos.c  alloc_veg_hist.c  check_save_state_flag.c  display_current_settings.c  get_force_type.c  get_global_domain.c  get_global_param.c  get_nc_dimension.c  get_nc_field.c  get_nc_var_attr.c  get_nc_varndimensions.c  initialize_energy.c  initialize_model_state.c  make_energy_bal.c  output_list_utils.c  print_library_image.c  put_nc_field.c  set_force_type.c  vic_alloc.c  vic_finalize.c  vic_force.c  vic_image.c  vic_image_finalize.c  vic_image_init.c  vic_image_run.c  vic_image_start.c  vic_init.c  vic_init_output.c  vic_mpi_support.c  vic_nc_info.c  vic_populate_model_state.c  vic_restore.c  vic_start.c  vic_store.c  vic_udunits.c  vic_write.c
vic/drivers/python/: README.md  setup.py  vic_build.py  vic_headers.py
vic/drivers/python/include/: vic_driver_python.h
vic/drivers/python/src/: display_current_settings.c  globals.c
vic/drivers/python/vic/: __init__.py  driver.py  pycompat.py  vic.py
vic/drivers/shared/include/: vic_driver_shared.h
vic/drivers/shared/src/: calc_root_fraction.c  cmd_proc.c  compute_cell_area.c  compute_lake_params.c  forcing_utils.c  free_all_vars.c  get_dist.c  get_parameters.c  (+19 more)
vic/drivers/shared_all/: readme.md
vic/drivers/shared_image/: readme.md
vic/extensions/: readme.md
vic/extensions/rout_rvic/: rout.mk
vic/extensions/rout_stub/: rout.mk
vic/vic_run/include/: vic_def.h  vic_log.h  vic_physical_constants.h  vic_run.h
vic/vic_run/src/: CalcAerodynamic.c  CalcBlowingSnow.c  IceEnergyBalance.c  SnowPackEnergyBalance.c  StabilityCorrection.c  advected_sensible_heat.c  alloc_and_free.c  arno_evap.c  calc_Nscale_factors.c  calc_atmos_energy_bal.c  calc_gridcell_avg_albedo.c  calc_rainonly.c  calc_snow_coverage.c  calc_surf_energy_bal.c  calc_veg_params.c  calc_water_energy_balance_errors.c  canopy_assimilation.c  canopy_evap.c  comparisons.c  compute_coszen.c  compute_derived_lake_dimensions.c  compute_pot_evap.c  compute_soil_resp.c  compute_zwt.c  correct_precip.c  estimate_T1.c  faparl.c  frozen_soil.c  func_atmos_energy_bal.c  func_atmos_moist_bal.c  func_canopy_energy_bal.c  func_surf_energy_bal.c  ice_melt.c  initialize_lake.c  interpoloation.c  lake_utils.c  lakes.eb.c  latent_heat_from_snow.c  massrelease.c  newt_raph_func_fast.c  (+22 more)
(+817 files in other folders)
